--- a/config/run3_modulesrdf.yaml
+++ b/config/run3_modulesrdf.yaml
@@ -1,119 +1,133 @@
-PuWeight:
-    name: puWeightRDF
-    path: Corrections.LUM.puWeight
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
-        auto: True
-        file: self.get_path(self.get_input())[0] # this is needed only if  auto: True
+# METfilters:
+#     name: MetFilterRDF
+#     path: Base.Modules.METfilters
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
 
-METfilters:
-    name: MetFilterRDF
-    path: Base.Modules.METfilters
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
+# LumiFilters:
+#     name: lumiFilterRDF
+#     path: Base.Modules.lumiFilter
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
 
-LumiFilters:
-    name: lumiFilterRDF
-    path: Base.Modules.lumiFilter
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
+# PuWeight:
+#     name: puWeightRDF
+#     path: Corrections.LUM.puWeight
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
+#         auto: True
+#         file: self.get_path(self.get_input())[0] # this is needed only if  auto: True
 
-EleCorrections_SF:
-    name: eleSFRDF
-    path: Corrections.EGM.eleCorrections
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
-        wps: ["wp80iso"]
+# EleCorrections_SF:
+#     name: eleSFRDF
+#     path: Corrections.EGM.eleCorrections
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
+#         wps: ["wp80iso"]
 
-EleCorrections_SS:
-    name: eleSSRDF
-    path: Corrections.EGM.eleCorrections
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
+# EleCorrections_SS:
+#     name: eleSSRDF
+#     path: Corrections.EGM.eleCorrections
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
 
-MuCorrections:
-    name: muSFRDF
-    path: Corrections.MUO.muCorrections
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
-        wps: ["tight_id", "tight_iso"]
+# MuCorrections:
+#     name: muSFRDF
+#     path: Corrections.MUO.muCorrections
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
+#         wps: ["tight_id", "tight_iso"]
 
 # Now contains a patch to make HHLepton_Selection work but needs to be fixed 
 # to properly take into account the WP in the TES evaluation
-TauCorrections:
-    name: tauSFRDF
-    path: Corrections.TAU.tauCorrections
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
-        vsjet_wps: ["Medium", "Tight"]
-        vse_wps: ["VVLoose", "Tight"]
-        vsmu_wps: ["VLoose", "Tight"]
-        vsjet_vse_wp: "VVLoose"
+# i.e. wehn applying TES systematic need to specify ID WP
+# TauCorrections:
+#     name: tauSFRDF
+#     path: Corrections.TAU.tauCorrections
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
+#         vsjet_wps: ["Medium", "Tight"]
+#         vse_wps: ["VVLoose", "Tight"]
+#         vsmu_wps: ["VLoose", "Tight"]
+#         vsjet_vse_wp: "VVLoose"
 
-BTagCorrections:
-    name: btagSFRDF
-    path: Corrections.BTV.btagCorrections
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
-        wps: ['shape', 'M']
+# BTagCorrections:
+#     name: btagSFRDF
+#     path: Corrections.BTV.btagCorrections
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
+#         wps: ['shape', 'M']
 
 # Now work in a patch of TauCorrections but needs to be fixed 
 # to properly take into account the WP in the TES evaluation
-HHLepton_Selection:
-    name: HHLeptonRDF
-    path: Tools.Tools.HHLepton
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
-        runPeriod: self.dataset.runPeriod
-        runEra: self.dataset.runEra
-        pairType_filter: True
-        vvvl_vsjet: self.config.deeptau.vsjet.VVVLoose
-        vl_vse: self.config.deeptau.vse.VLoose
-        vvl_vse: self.config.deeptau.vse.VVLoose
-        t_vsmu: self.config.deeptau.vsmu.Tight
-        vl_vsmu: self.config.deeptau.vsmu.VLoose
+# HHLepton_Selection:
+#     name: HHLeptonRDF
+#     path: Tools.Tools.HHLepton
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runEra: self.dataset.runEra
+#         tauId_algo: self.config.tauId_algo
+#         tauId_algo_wps: self.config.tauId_algo_wps
+#         pairType_filter: True
 
-HHLepton_Variables:
-    name: HHLeptonVarRDF
-    path: Tools.Tools.HHLepton
-    parameters:
-        isMC: self.dataset.process.isMC
-        year: self.config.year
+# HHLepton_Variables:
+#     name: HHLeptonVarRDF
+#     path: Tools.Tools.HHLepton
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
 
 ## FROM HERE UP ALL DONE/TESTED 
 ############################################
 ## FROM HERE DOWN ALL TO BE DONE/TESTED 
 
-# JmeCorrections_SF:
-#     name: 
-#     path: 
-#     parameters:
-#         isMC: self.dataset.process.isMC
-#         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+JmeCorrections_veto:
+    name: vetoMapRDF
+    path: Corrections.JME.jetCorrections
+    parameters:
+        isMC: self.dataset.process.isMC
+        year: self.config.year
+        runPeriod: self.config.runPeriod
+        apply_veto: True
 
-# JmeCorrections_PUJetID:
+# JmeCorrections_jec:
 #     name: 
-#     path: 
+#     path: Corrections.JME.jetCorrections
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
+
+# JmeCorrections_jer:
+#     name: 
+#     path: Corrections.JME.jetCorrections
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
+
+# JmeCorrections_??:
+#     name: ??
+#     path: Corrections.JME.??
+#     parameters:
+#         isMC: self.dataset.process.isMC
+#         year: self.config.year
+#         runPeriod: self.config.runPeriod
 
 # HHJet_Selection:
 #     name: HHJetsRDF
@@ -121,7 +135,10 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         extEtaAcc: True
+#         btag_algo: self.config.btag_algo
+#         btag_algo_wps: self.config.btag_algo_wps
+#         bpair_filter: True
 
 # SVfit:
 #     name: SVFitRDF
@@ -129,7 +146,7 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
 
 # HHKinFit:
 #     name: HHKinFitRDF
@@ -137,7 +154,7 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
 
 # IdAndIsoSF:
 #     name: dauIdIsoSFRDF
@@ -145,7 +162,7 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
 
 # TrigSF: ???
 #     name: Htt_trigSFRDF
@@ -153,7 +170,7 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
 
 # HHBTagDNN:
 #     name: 
@@ -161,7 +178,7 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
 
 # MulticlassifierDNN:
 #     name: HHMulticlassRDF
@@ -169,7 +186,7 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
 
 # HHDNN:
 #     name: HHDNNRDF 
@@ -177,4 +194,4 @@ HHLepton_Variables:
 #     parameters:
 #         isMC: self.dataset.process.isMC
 #         year: self.config.year
-#         runPeriod: self.dataset.runPeriod
+#         runPeriod: self.config.runPeriod
